# linearplus

./: .eidos-plugin.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LINEARDB.md  LINEAR_DATA_EXPORT.md  README.md  SECURITY.md  playbook.md  plugin.yaml  pyproject.toml  verify.py
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.eidos/ship/: manifest.toml
.eidos/ship/shipments/: shipment-20260529-084722.json  shipment-20260529-084923.json
linearplus/: __init__.py  cli.py  client.py
skills/use-linearplus/: SKILL.md
tests/: test_linearplus.py
