[project]
name = "linearplus"
version = "0.1.0"
description = "CLI-first Linear GraphQL bridge for capabilities missing from connector surfaces."
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Eidos AGI", email = "daniel@eidosagi.com" }
]
keywords = ["linear", "graphql", "initiatives", "projects", "cli", "eidos-agi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools"
]
dependencies = [
  "lineardb @ git+https://github.com/eidos-agi/lineardb.git",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
linearplus = "linearplus.cli:main"

[project.urls]
Homepage = "https://github.com/eidos-agi/linearplus"
Repository = "https://github.com/eidos-agi/linearplus"
Issues = "https://github.com/eidos-agi/linearplus/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true
